assets/css/form-style.css
/* INPUT FORMS */

form input {
    margin: 10px 10px 10px 10px;
}

.register-view, .login-view {
    color: black;
}

.input-form {
    font-size: 18px;
}

.input-form input[type="text"],
.input-form input[type="password"] {
    width: 100%;
    padding: 8px;
    font-size: 18px;
}

/* CONTAINERS */

#overlay-container,
#notification-overlay-container {
    opacity: 0;
    transition: opacity 0.25s ease;
    border-radius: 8px;
}

#overlay-container.open {
    position: fixed;
    top: 40vh;
    left: calc((100vw - 50vw) / 2);
    width: 50vw;
    max-width: 50vw;
    z-index: 300;
    background-color: rgb(214, 214, 214);
    padding: 20px;
    opacity: 1;
}

#notification-overlay-container.open {
    position: fixed;
    top: 10vh;
    left: calc((100vw - 30vw) / 2);
    width: 30vw;
    max-width: 30vw;
    z-index: 301;
    background-color: rgb(17, 168, 50);
    padding: 20px;
    opacity: 1;
}

#overlay-container.open.error,
#notification-overlay-container.open.error {
    background-color: red;
}

/* NOTIFICATION */

.notification-message {
    margin: 8px 0px;
}

/* BACKDROPS */

#overlay-backdrop {
    transition: 2s;
}

#overlay-backdrop.activated {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    opacity: 0.4;
    z-index: 299;
    background-color: rgb(87, 87, 87);
    touch-action: none;
}

#overlay-backdrop.activated.error {
    background-color: rgb(128, 0, 0);
}

/* SPECIAL SECTIONS */

#register-from-login {
    margin-top: 24px;
    line-height: 30px;
}

